--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import './common/reset.scss';
 
 @tailwind base;
-@tailwind components;
+// @tailwind components;
 @tailwind utilities;
+
+page {
+  font-size: theme('fontSize.sm');
+}
